--- a/client/pages/search/search.wxss
+++ b/client/pages/search/search.wxss
@@ -1,1 +1,26 @@
-/* pages/search/search.wxss */
+.search-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.search-container .result {
+  flex: 1;
+  background: #eee;
+  overflow: hidden;
+}
+
+.item {
+  margin-bottom: 20rpx;
+  background: #fff;
+  padding: 20rpx;
+}
+
+.address {
+  font-size: 24rpx;
+  color: #f19a38;
+}
+
+.message {
+  font-size: 30rpx;
+}
